--- a/samples/template_process_files.ipynb
+++ b/samples/template_process_files.ipynb
@@ -35,7 +35,8 @@
     "#\n",
     "add_to_syspath('/home/matthias/jupyter')\n",
     "add_to_syspath('/home/matthias/jupyter/bia')\n",
-    "add_to_syspath('/home/matthias/python')"
+    "add_to_syspath('/home/matthias/python')\n",
+    "add_to_syspath('/home/matthias/python/batch_tool/lib')\n"
    ]
   },
   {
@@ -56,7 +57,7 @@
    "source": [
     "from bia.tools import visualization\n",
     "import imageio\n",
-    "from batch_tool import batchjob, batchjob_helper\n",
+    "from batchtool import batchjob, batchjob_helper\n",
     "\n"
    ]
   },
@@ -186,15 +187,15 @@
     "from functools import reduce\n",
     "\n",
     "# example: caluclates overall length of string output\n",
-    "def process_result(results: list):\n",
+    "\n",
+    "\n",
+    "def process_result(results: list, param: dict):\n",
     "    return reduce(lambda x,y: x+len(y) if y != None else x, results, 0)\n",
     "\n",
     "\n",
     "r1 = bj.process_result(fn=process_result)\n",
     "\n",
-    "r2 = process_result(bj.get_result())\n",
-    "\n",
-    "print(r1, r2)"
+    "print(r1)"
    ]
   },
   {
