update sample notebook

--- a/samples/template_process_files.ipynb
+++ b/samples/template_process_files.ipynb
@@ -55,8 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bia.tools import visualization\n",
-    "import imageio\n",
+    "from bia.tools import imageio\n",
     "from batchtool import batchjob, batchjob_helper\n",
     "\n"
    ]
@@ -206,9 +205,12 @@
    "source": [
     "\n",
     "def group_batches_by_folder(infiles, outfiles):\n",
-    "    group_in_folders = [[infiles, outfiles]\n",
+    "    group_in_folders = [(infiles, outfiles)\n",
     "                        for i, infiles, outfiles in batchjob_helper.get_batch_per_folder(infiles, outfiles)]\n",
-    "    return group_in_folders\n"
+    "    return group_in_folders\n",
+    "\n",
+    "def group_batches(infiles, outfiles, parameters):\n",
+    "    return group_batches_by_folder(infiles, outfiles)"
    ]
   },
   {
@@ -223,7 +225,7 @@
     "\n",
     "# group to batch with multiple files\n",
     "bj.process_files(process_file_batch, in_files, out_files, param,\n",
-    "                 max_workers=4, group_batches=group_batches_by_folder)\n",
+    "                 max_workers=4, group_batches=group_batches)\n",
     "# no grouping batch in -> out\n",
     "bj.process_files(process_file_batch, in_files, out_files, param, max_workers=4)\n"
    ]
@@ -246,30 +248,48 @@
     "\n",
     "    pool_obj = multiprocessing.Pool()\n",
     "    # get pids from pool\n",
-    "    answer = pool_obj.map(all_pids, range(0, 5))\n",
-    "    print(answer)\n",
+    "    pids_in_this_process = pool_obj.map(all_pids, range(0, 5))\n",
+    "    print(pids_in_this_process)\n",
     "\n",
     "    # use shared memory\n",
     "    d_shared: dict = param['d_shared']\n",
     "    # use lock to access shared memory\n",
     "    with lock:\n",
     "        if d_shared.get('cnt') == None:\n",
-    "            d_shared['cnt'] = 1\n",
+    "            d_shared['cnt'] = param['cnt'] + 1\n",
     "        else:\n",
     "            d_shared['cnt'] += 1\n",
     "\n",
     "\n",
-    "    return [os.getpid(), d_shared['cnt'], answer]\n",
+    "    return [os.getpid(), d_shared['cnt'], pids_in_this_process]\n",
     "\n",
     "param['verbose'] = False\n",
-    "param['cnt'] = 0\n",
+    "param['cnt'] = 10\n",
+    "\n",
+    "max_workers=8\n",
     "\n",
     "bj.process_files(process_file_with_parallel, in_files,\n",
-    "                 out_files, param, max_workers=32)\n",
-    "\n",
+    "                 out_files, param, max_workers=max_workers)\n",
+    "print('# [pid, cnt value, [list of pids used in one batch using map]]')\n",
     "bj.print_result()\n",
     "\n",
-    "print(param['cnt'])\n",
+    "d_shared = param['d_shared']\n",
+    "print(d_shared['cnt'])\n",
+    "\n",
+    "def process_result(results: list, param: dict):\n",
+    "    # max 'cnt' value returned by all processes\n",
+    "    return reduce(lambda x,y: y[1] if y != None and x<y[1] else x, results, 0)\n",
+    "\n",
+    "\n",
+    "max_cnt = bj.process_result(fn=process_result)\n",
+    "print('values must be the same:', max_cnt, d_shared['cnt'])\n",
+    "\n",
+    "def process_result(results: list, param: dict):\n",
+    "    # unique list of pids used to process batch list\n",
+    "    return set(reduce(lambda x,pid: x+[pid[0]] if pid != None else x, results, []))\n",
+    "\n",
+    "unique_pids = bj.process_result(fn=process_result)\n",
+    "print('values must be the same:',len(unique_pids), max_workers)\n",
     "\n",
     "bj.print_rusage()\n"
    ]
@@ -291,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
